# tmgenius-ascend-vllm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile-310p  README.md  asr_perf_report.txt  asr_perf_report1.txt  docker-compose.yaml  healthcheck-vl-7b.sh  main.py  pyproject.toml  tmgenius-docker-800i-a2-v2-single-server.yaml
src/: connections.py  translation_proxy.py
src/api/: connection_manager.py  health.py  metrics.py  session.py  websocket.py
src/core/: config.py  logging.py
src/models/: schemas.py
src/services/: asr_service.py  itn_pool.py  vad_service.py
src/utils/: audio.py
test/: asr_latency_profile.py  asr_perf_benchmark.py  opus_test_client.py  qwen_tts.py  ws_stress_test.py
test/pipeline/: pipeline_common.py
test/vad/: dynamic_batch_bottleneck_test.py  dynamic_batch_results.txt
weights/fst_itn_zh/: .msc  .mv  README.md  configuration.json  zh_itn_tagger.fst  zh_itn_verbalizer.fst
weights/itn/: itn_wrapper.py
weights/vad/ten-vad/include/: ten_vad.py
