[project]
name = "tmgenius-ascend-vllm"
version = "0.1.0"
description = "Real-time ASR streaming service based on WebSocket"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "websockets>=12.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.5.0",
    "numpy==1.26.4",
    "httpx>=0.27.0",
    "prometheus-client>=0.21.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pyrefly]
python-version = "3.11"
search_path = ["."]
reportMissingImports = "none"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
